--- a/Daily Memories/Info.plist
+++ b/Daily Memories/Info.plist
@@ -56,5 +56,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Daily Memories helps you find the photos taken on this date in your history</string>
 </dict>
 </plist>
