Move PHAsset Extension to shared library

--- a/Daily Memories.xcodeproj/xcshareddata/xcschemes/Daily Memories.xcscheme
+++ b/Daily Memories.xcodeproj/xcshareddata/xcschemes/Daily Memories.xcscheme
@@ -48,6 +48,16 @@
                ReferencedContainer = "container:Daily Memories.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A33CB91B25479C4C00F615D0"
+               BuildableName = "DailyMemoriesSharedCodeTests.xctest"
+               BlueprintName = "DailyMemoriesSharedCodeTests"
+               ReferencedContainer = "container:Daily Memories.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
