--- a/Daily Memories.xcodeproj/xcshareddata/xcschemes/Daily Memories App Extension.xcscheme
+++ b/Daily Memories.xcodeproj/xcshareddata/xcschemes/Daily Memories App Extension.xcscheme
@@ -43,6 +43,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A33CB91B25479C4C00F615D0"
+               BuildableName = "DailyMemoriesSharedCodeTests.xctest"
+               BlueprintName = "DailyMemoriesSharedCodeTests"
+               ReferencedContainer = "container:Daily Memories.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
